# function_measurer

./: .gitignore  LICENSE  README.html  README.md  README.ru.md  config.cfg  main.py  manifest.in  pyproject.toml  setup.py  test.py
archive/: function_measurer-0.1.1-py3-none-any.whl  function_measurer-0.2-py3-none-any.whl  function_measurer-0.3-py3-none-any.whl
measurer/: __init__.py  __main__.py  args.py  cli.py  interface.py  result_tables.py  tester.py
