[tool.poetry]
name = "function-measurer"
version = "0.4.0"
description = "Python utility for compairing functions and other callable objects."
authors = ["InternetStalker <internetstalcker@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "function_measurer"}]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
