[tool.poetry]
name = "function-measurer"
version = "0.4.0"
description = "Python utility for compairing functions and other callable objects."
authors = ["InternetStalker <internetstalcker@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "measurer"}]
keywords = ["measurance", "perfomance", "memory", "tests"]
homepage = "https://github.com/InternetStalker/function_measurer"
documentation = "https://github.com/InternetStalker/function_measurer/blob/master/README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/InternetStalker/function_measurer/issues"
"Документация на русском" = "https://github.com/InternetStalker/function_measurer/blob/master/README.ru.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
